# wheele-obstacle-perception

./: CMakeLists.txt  README.md  WOPConfig.h.in
include/wop/: Location.h  Obstacles.h  OccupancyMap.h
lib/: CMakeLists.txt  Location.cpp
test/: first  second
tools/: CMakeLists.txt
tools/wop-app/: CMakeLists.txt  wop-app.cpp
tools/wop-check/: CMakeLists.txt  wop-check.cpp
unittest/: CMakeLists.txt  test-all.cpp
